<package format="2">
    <name>dstar_trajectory_planner</name>
    <version>0.1.3</version>
    <description>
        move_base global planner plugin based on OccupancyGrid map and D-Star algorithm
    </description>

    <maintainer email="andrey.vukolov@elettra.eu">Andrey Vukolov</maintainer>
    <author email="andrey.vukolov@elettra.eu">Andrey Vukolov</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pluginlib</depend>
    <depend>move_base</depend>
    <depend>costmap_2d</depend>
    <export>
        <nav_core plugin="${prefix}/dstar_global_planner_plugin.xml" />
    </export>
</package>

