<package format="2">
    <name>dstar_global_planner</name>
    <version>0.1.3</version>
    <description>
        move_base global planner plugin based on OccupancyGrid map and D-Star algorithm
    </description>

    <maintainer email="andrey.vukolov@elettra.eu">Andrey Vukolov</maintainer>
    <author email="andrey.vukolov@elettra.eu">Andrey Vukolov</author>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <!-- <depend>rosidl_default_runtime</depend> -->
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pluginlib</depend>
    <depend>move_base</depend>
    <depend>nav2_costmap_2d</depend>
    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/global_planner_plugin.xml" />
    </export>
</package>

